--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Los espantaviejas</title>
+    <title>Los Espantaviejas</title>
     <link rel="stylesheet" href="style.css"/>    
 </head>
-    <body id="espantaviejas">
+    <body id="Espantaviejas">
     <header id="header">
-<h1>Los espantaviejas</h1>
+<h1>Los Espantaviejas</h1>
 <a href="Https//:www.google.com"7 target="_blank" class="directorío">Google</a> <a href="Espantaviejas/eres.PNG" target="_blank" class="directorío">Hentai</a>
 <!--Mi primera página oficial y es una marikeando con los panas-->
 </header>
@@ -39,7 +39,7 @@
 <h2 class="título2">¡Precausión!</h2>
 <h3>¿Quienes son <i>Los Espantaviejas?</i></h3>
  <!--No sé me ocurría nada, y resulta que sí parecemos criminales en esas fotos-->
-    <p class="artículo">Los espantaviejas son un grupo de peligrosos criminales,
+    <p class="artículo">Los Espantaviejas son un grupo de peligrosos criminales,
      corrompidos por la sociedad y su falta de antención femenina
     (En especial el que hizo esta página, claramente nunca ha tenido afecto femenino).</p>
 <h3>¿Qué hacen?</h3>
@@ -53,7 +53,7 @@
         Cada vez que terminan de ver una película de Tarantino dicen "cine".
          Bailan el opening de Evangelio. Juegan Lol o Warcraft.  Lloraron viendo Naruto. Se vieron Kimi no Todoke solos. Se saben Dragon ball Rap de Porta. Vendían dibujos de goku en primaría. Se rién con los videos de Escuela de Nada. Se saben el chiste del carro de drácula. Ninguno tiene pc gamer. Saben instalarle mobs al GtaSa y Minecraft. De pequeño jugaron five night and Freddy. Dicen "el rock es cultura". Se saben alguna canción de Bts porque conocen a una morra que les gusta. Todos saben de computadoras. Crean páginas en internet(este último es el peor). </p>
          <audio controls="preload"  autoplay id="audio">
-            <source src="espantaviejas/audio1.mp3"> 
+            <source src="Espantaviejas/audio1.mp3"> 
             </audio>
     <p>Aquí les dejo unas fotos y breve descripción de los protagonistas:</p>
     </article>
@@ -61,7 +61,7 @@
     <h2>ROBERT</h2><!--ARMADO Y PELIGROSO JSJAASASKASJK-->
     <P class="armado">Armado y peligroso.<br> Armas: Su mirada y es terraplanista.</P>
     <audio controls="preload"  autoplay id="audio">  
-        <source src="espantaviejas/song1.MP3"> 
+        <source src="Espantaviejas/song1.MP3"> 
     </audio>
 
     <img src="Espantaviejas/robert.jpg" alt="Es robert" title="Robert cara 'e malandro"/>
@@ -73,7 +73,7 @@
     <h2>BOGART</h2>
     <p>Si lo ven, reportelo con las autoridades.</p>
     <audio controls="preload"  autoplay id="audio">
-        <source src="espantaviejas/song2.MP3"> 
+        <source src="Espantaviejas/song2.MP3"> 
     </audio>
 
     <img src="Espantaviejas/bogart.jpg" alt="Es bogart" title="Bogart con cara de que te quiere vender piedra"/>
@@ -104,7 +104,7 @@
             </section>
     <footer>
         <section class="footer">
-        <a href="#espantaviejas">Ir al inicio</a>
+        <a href="#Espantaviejas">Ir al inicio</a>
         <a href="htttp//:www.facebook/profile/CristianDFloresE/.com" target="_blank">Contactame Aquí</a>
     </section>
      <p>El copyright de esta página es mío, y el de quien me mame el... ¿Tienes más de 18?</p>
